# opengwasdb

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
benchmarks/: README.md  benchmark_38714679_dense.py  benchmark_ebi_input_dense.py  benchmark_ragged_besd.py  benchmark_vcf_ukb_chr1_1000_dense.py  benchmark_vcf_ukb_chr1_dense.py
docs/: index.html  opengwasdb-dense-38714679-benchmark.html  opengwasdb-dense-38714679-benchmark.qmd  opengwasdb-dense-ebi-input-benchmark.html  opengwasdb-dense-ebi-input-benchmark.qmd
issues/: 001-minimal-store-release-open-info-validate.md  002-source-row-reader-and-canonical-variant-normalisation.md  003-build-tiny-dense-observed-only-store.md  004-layout-independent-exact-variant-and-range-queries.md  005-analysis-extraction-and-phewas-style-queries.md  006-derived-beta-and-pvalue-result-contract.md  007-dense-top-hit-index-and-query.md  008-end-to-end-cli-build-query-workflow.md  009-validation-hardening-for-invalid-stores-and-statistics.md  010-compression-and-chunking-defaults-for-dense-v0.1.md  011-v0.1-compatibility-review-against-deferred-designs.md  012-production-variant-normalisation.md  013-gwas-vcf-source-reader.md  013-variant-store-contract-and-dependency.md  014-inline-hg19-hg38-liftover.md  014-write-tiny-tabix-variant-axis.md  015-open-and-validate-tabix-variant-axis.md  015-two-pass-dense-build-from-vcf-manifest.md  016-canonical-alid-and-range-queries.md  016-chr1-ukb-vcf-ingestion-benchmark.md  017-alias-lookup-semantics.md  018-analysis-sparse-lookup-and-row-materialisation.md  019-top-hits-with-variant-offsets.md  (+25 more)
(+84 files in other folders)
