[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opengwasdb"
version = "0.1.0"
description = "Standalone storage and query engine for OpenGWAS-scale summary statistic stores"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenGWASDB contributors" }
]
dependencies = [
  "numpy>=1.26,<2.5",
  "zarr>=2.18,<3",
  "numcodecs>=0.12",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
opengwasdb = "opengwasdb.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["numcodecs", "zarr"]
ignore_missing_imports = true
